--- a/style.css
+++ b/style.css
@@ -221,6 +221,138 @@
   font-weight: 200;
 }
 
+.appointment-container {
+  background-image: url("images/backgroundd.png");
+  margin-top: 100px;
+  background-color: #2dcf57;
+  color: white;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 15%;
+}
+
+.ap-h1 {
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+.ap-btn {
+  background-color: black;
+  padding: 8px 13px;
+  font-size: 16px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-top: 30px;
+}
+
+.clients-part {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+.clients-h1 {
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.clients-p1 {
+  font-weight: 300;
+  width: 60%;
+  text-align: center;
+}
+
+.clients-container {
+  display: flex;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.arrow {
+  color: black;
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 15px 20px;
+  font-size: 24px;
+  cursor: pointer;
+  margin: 0 60px;
+}
+
+.arrow:hover {
+  background-color: #a6e8b7;
+}
+
+.clients-card {
+  width: 90%;
+  height: 40%px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 70px;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
+.mini-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.card img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#name {
+  font-size: 18px;
+  color: #333;
+  width: 300px;
+}
+
+#date {
+  font-size: 14px;
+  color: #555;
+}
+
+#reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#stars {
+  font-size: 30px;
+  color: orange;
+}
+
+#writtenReview {
+  font-style: italic;
+  text-align: center;
+  color: #777;
+  text-align: left;
+  margin-top: 30px;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .container {
@@ -298,5 +430,25 @@
 
   .service-card {
     width: 300px;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .arrow {
+    padding: 8px;
+    font-size: 10px;
+    margin: 10px;
+  }
+
+  .clients-card {
+    padding: 10px;
+  }
+
+  #name {
+    width: 100px;
   }
 }
