--- a/style.css
+++ b/style.css
@@ -436,8 +436,8 @@
 }
 
 .request-left h1 {
-    font-size: 32px;
-    width: 300px;
+  font-size: 32px;
+  width: 300px;
 }
 
 .profile-img {
@@ -480,6 +480,56 @@
   border-radius: 5px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.footer-container {
+  background-color: #eafff0;
+  margin-top: 100px;
+}
+
+.footer {
+  display: flex;
+  padding: 80px;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  gap: 15px;
+}
+
+.fab {
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 5px;
+  color: #242424;
+}
+
+.footer-h3 {
+  margin-bottom: 40px;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-links a {
+  color: black;
+}
+
+.footer-p1 {
+  font-weight: 300;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 300px;
+}
+
+.footer-p {
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 20px;
 }
 
 /* Responsive styles */
@@ -599,5 +649,29 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+  }
+
+  .request-section {
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    padding: 20px;
+  }
+
+  .input {
+    padding: 10px 30px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
