--- a/doctors.css
+++ b/doctors.css
@@ -102,6 +102,7 @@
   flex-direction: column;
   align-items: start;
   width: 295px;
+  height: 250px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-bottom-left-radius: 15px;
@@ -135,6 +136,150 @@
   border-radius: 50%;
   padding: 5px;
   color: #242424;
+}
+
+.appointment-container {
+  background-image: url("images/backgroundd.png");
+  margin-top: 100px;
+  background-color: #2dcf57;
+  color: white;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 15%;
+}
+
+.ap-h1 {
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+.ap-btn {
+  background-color: black;
+  padding: 8px 13px;
+  font-size: 16px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-top: 30px;
+}
+
+.request-section {
+  display: flex;
+  margin-top: 100px;
+  background-color: black;
+  color: white;
+  justify-content: space-between;
+  padding: 90px;
+  border-radius: 30px;
+}
+
+.request-left {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+
+.request-left h1 {
+  font-size: 32px;
+  width: 300px;
+}
+
+.profile-img {
+  width: 70px;
+  height: 70px;
+}
+
+.doc-request {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.doc-request p {
+  width: 200px;
+}
+
+.request-right {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+
+.input {
+  padding: 15px;
+  padding-right: 200px;
+  border-radius: 5px;
+  text-align: left;
+  border: 1px solid #ccc;
+  font-size: 14px;
+}
+
+.submit-btn {
+  background-color: #2dcf57;
+  padding: 8px 13px;
+  font-size: 16px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.footer-container {
+  background-color: #eafff0;
+  margin-top: 100px;
+}
+
+.footer {
+  display: flex;
+  padding: 80px;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  gap: 15px;
+}
+
+.fab {
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 5px;
+  color: #242424;
+}
+
+.footer-h3 {
+  margin-bottom: 40px;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-links a {
+  color: black;
+}
+
+.footer-p1 {
+  font-weight: 300;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 300px;
+}
+
+.footer-p {
+  text-align: center;
+  margin-top: 20px;
+  padding-bottom: 20px;
 }
 
 @media (max-width: 768px) {
@@ -182,5 +327,29 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+  }
+
+  .request-section {
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    padding: 20px;
+  }
+
+  .input {
+    padding: 10px 30px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
